video list spacing for safari bug5

--- a/css/style.css
+++ b/css/style.css
@@ -2415,7 +2415,7 @@ body[data-design="option-4"] {
 
         font-size: 10rem;
         /*  transform: translateY(-45%);*/
-        top: 40px;
+        top: 155px;
 
 
     }
